<resources>
    <string name="app_name">FoodsGully User</string>
    <string name="name_foodsgully">FoodsGully</string>
    <string name="title_login">Sign In</string>
    <string name="enter_email">Enter your Email</string>
    <string name="enter_password">Enter your password</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_no_account">First time User? Signup by clicking below </string>
    <string name="txt_signup">Sign Up</string>
    <string name="error_empty_email">Please enter the Email!</string>
    <string name="invalid_email">Email you entered is invalid!</string>
    <string name="error_empty_password">Please enter the password!</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="login_in">Login in...</string>
    <string name="btn_txt_next">Next</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="current_location">Use Current Location</string>
    <string name="lbl_house_no">House No./Flat No.*</string>
    <string name="hint_house_no">C-12/2</string>
    <string name="lbl_floor">Floor*</string>
    <string name="hint_floor">1st floor</string>
    <string name="lbl_address">Address*</string>
    <string name="hint_address">Ashok Apartments, Gomti Nagar</string>
    <string name="lbl_pin">Pin*</string>
    <string name="hint_pin">100001</string>
    <string name="lbl_landmark">Landmark</string>
    <string name="hint_landmark">Near Bata Showroom</string>
    <string name="hint_search_product">Search Product</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_shop_category">Shop By Category</string>
    <string name="btn_txt_add">+ Add</string>
    <string name="title_cart">Cart (%d %s)</string>
    <string name="btn_remove">Remove</string>
    <string name="lbl_item_total">Item Total</string>
    <string name="lbl_taxes"><![CDATA[Taxes & Surcharges]]></string>
    <string name="lbl_grand_total">Grand Total</string>
    <string name="btn_proceed_checkout">Proceed To Checkout</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="title_delivery_date_time">Choose your Delivery date and time</string>
    <string name="lbl_delivery_details">Delivery Details</string>
    <string name="delivery_details_info">We now have 4 delivery slots, so you can select any slot according your preference</string>
    <string name="lbl_select_date_time"><![CDATA[Select Time & Date]]></string>
    <string name="lbl_date">Date</string>
    <string name="early_morning_time">07:00am to 10:00 am</string>
    <string name="morning_time">10:30am to 02:30pm</string>
    <string name="afternoon_time">03:00pm to 06:00pm</string>
    <string name="evening_time">06:30pm to 08:00pm</string>
    <string name="lbl_early_morning">Early Morning</string>
    <string name="lbl_morning">Morning</string>
    <string name="lbl_afternoon">Afternoon</string>
    <string name="lbl_evening">Evening</string>
    <string name="pay_online">Pay Online</string>
    <string name="pay_by_cash">Pay By Cash</string>
    <string name="btn_place_order">Place Order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_skip">Skip</string>
    <string name="error_empty_phonenumber">Please enter you phone number</string>
    <string name="error_valid_phone">Please enter a valid phone number</string>
    <string name="error_empty_name">Please Enter your name</string>
    <string name="location_permission_rationale">Location Permission is required to get the current address of your current location</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_signup_info">SignUp Info</string>
    <string name="txt_items">Items</string>
    <string name="txt_item">Item</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="order_placed">Order Placed Successfully</string>
    <string name="menu_products">Products</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_checkout">Checkout Fragment</string>
    <string name="menu_account">My Account</string>
    <string name="menu_change_location">Delivery Location</string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_direct_order">Direct Order On Call</string>
    <string name="menu_address">Address</string>
    <string name="menu_profile">Your Account</string>
    <string name="menu_order_details">Orders</string>
    <string name="menu_order_history">Order History</string>
    <string name="title_location">Location</string>
    <string name="btn_txt_edit">Edit</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="lbl_email">Email Id.</string>
    <string name="lbl_phone_number">Phone Number.</string>
    <string name="lbl_password">Password</string>
    <string name="btn_photo">Photo</string>
    <string name="btn_txt_submit">Submit</string>
    <string name="txt_selected_quantity">Quantity: %s</string>
    <string name="txt_item_total">Item Total: %s</string>
    <string name="delivery_status">Delivery Status : %s</string>
    <string name="lbl_payment_status">Payment Status</string>
    <string name="header_order_details">Order Details</string>
    <string name="txt_order_total">Order Total: %s</string>
    <string name="payment_status">Payment Status : %s</string>
    <string name="no_orders_for_this_date">No Orders for this date</string>
    <string name="updating_address">Updating Address</string>
    <string name="address_updated">Address has been Updated!</string>
    <string name="fetching_categories">Fetching Categories..</string>
    <string name="fetching_products">Fetching products...</string>
    <string name="placing_the_order">Placing the order...</string>
    <string name="no_delivery_time_for_today">Delivery time over for today</string>
    <string name="select_delivery_time">Please select a delivery time</string>
    <string name="fill_home_address">Update your delivery address by clicking here</string>
    <string name="no_location">No Location</string>
    <string name="fetching_current_address">Fetching Current Address</string>
    <string name="fetching_your_orders">Fetching your orders...</string>
    <string name="menu_logout">Logout</string>
    <string name="title_my_account">My Account</string>
    <string name="need_storage_permission">Need permission to access your images for profile pic</string>
    <string name="updatiing_profile">Updating Profile..</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="signing_up">Signing up...</string>
    <string name="enter_email_phone_number">Enter your email/phone number</string>
    <string name="updating_payment_status">Updating the payment status</string>
    <string name="payment_successful">Payment is Successful</string>
    <string name="payment_unsuccessful">Payment is not successful. Please try again!</string>
    <string name="lbl_mrp">MRP:</string>
    <string name="lbl_quantity">Quantity:</string>
    <string name="header_product_details">Product Details</string>
    <string name="not_deliverable_location">We are not serving your location currently! We will let you know once we are serving your area</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="menu_reset_password">Reset Password</string>
    <string name="resetting_password">Resetting the Password</string>
    <string name="password_update_success">Password Updated Successfully!</string>
    <string name="channel_name">FoodsGully User Channel</string>
    <string name="channel_description">This channel will have messages related to FGUser</string>
    <string name="channel_group_name">FG User Channel</string>


</resources>